# python-template

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .pydocstyle  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/: labels.yml  release-drafter.yml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  labeler.yml  publish.yml  release-drafter.yml  tests.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_main.py
